# TokenTracker

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.de.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  patch-api.js  weekly-report-2026-W4.md
.github/: _ci_flow_probe.md
TokenTrackerBar/: project.yml
TokenTrackerLinux/: README.md  package-lock.json  package.json
TokenTrackerLinux/src-tauri/: Cargo.toml  tauri.conf.json
TokenTrackerLinux/src-tauri/src/: lib.rs  main.rs  paths.rs  server.rs  tray.rs
TokenTrackerWin/: .gitignore  BrowserTabCloser.cs  Currency.cs  DashboardWindow.cs  Diag.cs  LaunchAtStartup.cs  PetWindow.cs  Program.cs  ServerManager.cs  TokenTrackerWin.csproj  TrayApplicationContext.cs  UpdateChecker.cs  UsagePoller.cs
dashboard/: index.html  package-lock.json  package.json  share.html  tailwind.config.cjs  vercel.json  vite.config.js  vitest.config.ts
docs/: codex-connector-auto-review-check.md  npm-publish-checklist.md  opencode-go-limits.md
migrations/: 20260717060000_add-device-name-customized.sql  20260718071507_add-shared-account-usage-cache.sql  20260718075000_expand-community-insights.sql  20260718082000_use-completed-days-for-community-growth.sql  20260719152022_harden-backend-concurrency.sql  20260721113000_add-device-skill-inventories.sql  20260721213000_add-model-leaderboard-snapshots.sql
scripts/: benchmark-codex-hot-paths.js  build-pricing-seed.cjs  install-local-service.sh  sync-versions.cjs  uninstall-local-service.sh  version-files.cjs  (+2 more)
(+549 files in other folders)
