[package]
name = "tokentracker-linux"
version = "0.83.1"
description = "TokenTracker Linux desktop client"
authors = ["TokenTracker"]
edition = "2021"
license = "MIT"

[lib]
name = "tokentracker_linux"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tokentracker-linux"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
